--- a/style.css
+++ b/style.css
@@ -154,3 +154,90 @@ q {
   margin-left: auto;
   margin-right: auto;
 }
+
+/*Image Gallery*/
+
+.view {
+  width: 400px;
+  height: 300px;
+  margin: 20px;
+  display: inline-block;
+  float: right;
+  border: 2px solid #fff;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  box-shadow: 1px 1px 2px #fff;
+  cursor: default;
+  background-size:cover;
+}
+
+.view .mask, .view .content {
+    width: 400px;
+    height: 300px;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+}
+.view img {
+    display: block;
+    position: relative;
+    width: 100%;
+    height:100%;
+}
+
+.view h2 {
+  text-transform: uppercase;
+  color: #fff;
+  text-align: center;
+  position: relative;
+  font-size: 17px;
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.8);
+  margin: 20px 0 0 0
+}
+.view p {
+  font-family: Georgia, serif;
+  font-style: italic;
+  font-size: 12px;
+  position: relative;
+  color: #fff;
+  padding: 10px 20px 20px;
+  text-align: center;
+}
+.view a.info {
+  display: inline-block;
+  text-decoration: none;
+  padding: 7px 14px;
+  background: #000;
+  color: #fff;
+  text-transform: uppercase;
+  box-shadow: 0 0 1px #000;
+}
+.view a.info:hover {
+  box-shadow: 0 0 5px #000;
+}
+
+.view-first img {
+  transition: all 0.2s linear;
+}
+.view-first .mask {
+  opacity: 0;
+  background-color: rgb(214, 0, 0);
+  transition: all 0.4s ease-in-out;
+}
+.view-first h2 {
+  transform: translateY(-100px);
+  opacity: 0;
+  transition: all 0.2s ease-in-out;
+}
+.view-first p {
+  transform: translateY(100px);
+  opacity: 0;
+	transition: all 0.2s linear;
+}
+.view-first a.info{
+  opacity: 0;
+	transition: all 0.2s ease-in-out;
+}
