--- a/style.css
+++ b/style.css
@@ -241,3 +241,43 @@ q {
   opacity: 0;
 	transition: all 0.2s ease-in-out;
 }
+
+/*Hover effect*/
+.view-first img {
+  transition: all 0.2s linear;
+}
+.view-first .mask {
+  opacity: 0;
+  background-color: rgb(214, 0, 0);
+  transition: all 0.4s ease-in-out;
+}
+.view-first h2 {
+  transform: translateY(-100px);
+  opacity: 0;
+  transition: all 0.2s ease-in-out;
+}
+.view-first p {
+  transform: translateY(100px);
+  opacity: 0;
+	transition: all 0.2s linear;
+}
+.view-first a.info{
+  opacity: 0;
+	transition: all 0.2s ease-in-out;
+}
+.view-first:hover img {
+	transform: scale(1.1);
+}
+.view-first:hover .mask {
+	opacity: 0.75;
+}
+.view-first:hover h2, .view-first:hover p, .view-first:hover a.info {
+  opacity: 1;
+  transform: translateY(0px);
+}
+.view-first:hover p {
+  transition-delay: 0.1s;
+}
+.view-first:hover a.info {
+  transition-delay: 0.2s;
+}
