--- a/style.css
+++ b/style.css
@@ -84,6 +84,14 @@ body, html {
   font-size:30px;
 }
 
+.banner-quote-dark {
+  padding: 25px;
+  color: #fff;
+  background-color: #2E2E2E;
+  text-align:center;
+  font-size:30px;
+}
+
 article {
   display: inline-block;
   margin-top: 20px;
@@ -103,6 +111,7 @@ article {
   width: 50%;
   margin-right: 30px;
   margin-top: 0px;
+  padding: 40px;
 }
 
 hr {
@@ -121,8 +130,9 @@ hr {
 
 .belt-tie img {
   width: 100%;
-  opacity: 0.8;
+  opacity: 0.9;
 }
+
 q {
   quotes: "\00ab" "\00bb" "\2039" "\203A";
 }
@@ -131,6 +141,58 @@ q {
   display: inline-block;
   margin-left: auto;
   margin-right: auto;
+}
+
+/* Menu */
+.overlay {
+    height: 0%;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.9);
+    overflow-y: hidden;
+    transition: 0.5s;
+}
+
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+}
+
+.overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+}
+
+@media screen and (max-height: 450px) {
+  .overlay {overflow-y: auto;}
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
 }
 
 /*Image Gallery*/
